# ivi

./: LO1.ipynb  pyproject.toml
dashboard/: dashboard.py  immo_data_large_cleaned.csv
