[tool.poetry]
name = "ivi"
version = "0.1.0"
description = ""
authors = ["denis.schatzmann@students.fhnw.ch <denis.schatzmann@students.fhnw.ch>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.3"
matplotlib = "^3.9.3"
jupyter = "^1.1.1"
plotly = "^5.24.1"
numba = "^0.60.0"
dash = "^2.18.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
